--- a/desafios/012/estilo/style.css
+++ b/desafios/012/estilo/style.css
@@ -70,16 +70,22 @@ section.normal {
 section.imagem {
     background-color: rgb(80, 80, 80);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.514);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.39);
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 1.5px 1.5px 0px black;
+
 }
 
 section#img01 {
     background-image: url('../imagens/background001.jpg');
+    background-position: right center;
 }
 
 section#img02 {
